tests/invalid/Old_Invalid_9.whiley
property broken(&int p) -> (bool r):
    return *p == old(*p)

method m(&int x):
    //
    assert broken(x)